--- a/trunk/osopos/doc/CHANGELOG
+++ b/trunk/osopos/doc/CHANGELOG
@@ -1,4 +1,7 @@
 Remision:
+1.39
+Con la tecla F11 se puede abrir un panel de búsqueda de productos, y con
+F12 se abre el cajón (si el usuario cuenta con los permisos)
 1.29
 Agrego configuración global y uso de nueva tabla almacen
 1.27
