--- a/trunk/osopos/doc/INSTALL
+++ b/trunk/osopos/doc/INSTALL
@@ -1,6 +1,6 @@
 How to install
 
-* Be sure to have running a postrgesql server and accepting TCP connections
+* Be sure to have running a postgresql server and accepting TCP connections
 * If the server is a remote server, make sure there is a line in pg_hba.conf
   for user scaja, database osopos and the IP address for the clients
 * Create database group osopos
@@ -10,6 +10,8 @@ How to install
   	 psql osopos < tablas.sql
 	-- OR --
 	psql -h servername -U scaja osopos < tablas.sql
+* Load data into database for country specifics, for example
+	psql -h servername -U scaja osopos < mexico.sql
 * Make the general config files under /etc/osopos
   (check the manuales section)
 * Insert a privileged user into table users. This user will do updates on tables
